--- a/public/404.html
+++ b/public/404.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>404 Page not found :: Terminal</title>
+    <title>404 Page not found :: Aditya Kumar</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="SEO, Blog, SSG, Hugo, Golang" />
 
   <meta name="robots" content="noodp" />
 
 <link rel="canonical" href="http://localhost:1313/404.html" />
+
+
+  
 
 
 
@@ -75,7 +78,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="" />
 <meta property="og:url" content="http://localhost:1313/404.html" />
-<meta property="og:site_name" content="Terminal" />
+<meta property="og:site_name" content="Aditya Kumar" />
 
   <meta property="og:image" content="http://localhost:1313/og-image.png">
 
@@ -95,6 +98,15 @@
 
 
 </head>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G2VJEPJXNS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G2VJEPJXNS');
+</script>
 <body>
 
 
@@ -171,18 +183,14 @@
     <footer class="footer">
   <div class="footer__inner">
     
-      <div class="copyright">
-        <span>© 2025 Powered by <a href="https://gohugo.io">Hugo</a></span>
+    <div class="copyright copyright--user">
+      <span>Aditya Kumar</span>
+    </div>
     
-      <span>:: <a href="https://github.com/panr/hugo-theme-terminal" target="_blank">Theme</a> made by <a href="https://github.com/panr" target="_blank">panr</a></span>
-      </div>
   </div>
 </footer>
 
-
-
-
-
+  
 
 <script type="text/javascript" src="/bundle.min.js"></script>
 
