--- a/public/about/index.html
+++ b/public/about/index.html
@@ -6,17 +6,15 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Hi there My name is Aditya and I&amp;rsquo;m bad at Valorant. I&amp;rsquo;ve reaches Silver3 in episode 9 ACT III.
+<meta name="description" content="Hi there My name is Aditya and I&rsquo;m bad at Valorant. I&rsquo;ve reaches Silver3 in episode 9 ACT III.
 We all know how hard is to play valorant in a 5 stack as lot of smurfs come on the opposing stack and thats tough.
-&amp;ldquo;I am not in danger, Skyler. I am the danger. A guy opens his door and gets shot, and you think that of me? No. I am the one who knocks." />
-<meta name="keywords" content="SEO, Blog, SSG, Hugo, Golang" />
+&ldquo;I am not in danger, Skyler. I am the danger. A guy opens his door and gets shot, and you think that of me? No. I am the one who knocks.&rdquo; — Walter White
+" />
+<meta name="keywords" content="" />
 
   <meta name="robots" content="noodp" />
 
 <link rel="canonical" href="http://localhost:1313/about/" />
-
-
-  
 
 
 
@@ -78,9 +76,10 @@ We all know how hard is to play valorant in a 5 stack as lot of smurfs come on t
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="About">
-<meta property="og:description" content="Hi there My name is Aditya and I&amp;rsquo;m bad at Valorant. I&amp;rsquo;ve reaches Silver3 in episode 9 ACT III.
+<meta property="og:description" content="Hi there My name is Aditya and I&rsquo;m bad at Valorant. I&rsquo;ve reaches Silver3 in episode 9 ACT III.
 We all know how hard is to play valorant in a 5 stack as lot of smurfs come on the opposing stack and thats tough.
-&amp;ldquo;I am not in danger, Skyler. I am the danger. A guy opens his door and gets shot, and you think that of me? No. I am the one who knocks." />
+&ldquo;I am not in danger, Skyler. I am the danger. A guy opens his door and gets shot, and you think that of me? No. I am the one who knocks.&rdquo; — Walter White
+" />
 <meta property="og:url" content="http://localhost:1313/about/" />
 <meta property="og:site_name" content="Aditya Kumar" />
 
