--- a/public/showcase/index.html
+++ b/public/showcase/index.html
@@ -7,14 +7,11 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Sample article showcasing basic styling and formatting for HTML elements." />
-<meta name="keywords" content="SEO, Blog, SSG, Hugo, Golang" />
+<meta name="keywords" content="" />
 
   <meta name="robots" content="noodp" />
 
 <link rel="canonical" href="http://localhost:1313/showcase/" />
-
-
-  
 
 
 
@@ -196,7 +193,7 @@
 <p>Xerum, quo qui aut unt expliquam qui dolut labo. Aque venitatiusda cum, voluptionse latur sitiae dolessi aut parist aut dollo enim qui voluptate ma dolestendit peritin re plis aut quas inctum laceat est volestemque commosa as cus endigna tectur, offic to cor sequas etum rerum idem sintibus eiur? Quianimin porecus evelectur, cum que nis nust voloribus ratem aut omnimi, sitatur? Quiatem. Nam, omnis sum am facea corem alique molestrunt et eos evelece arcillit ut aut eos eos nus, sin conecerem erum fuga. Ri oditatquam, ad quibus unda veliamenimin cusam et facea ipsamus es exerum sitate dolores editium rerore eost, temped molorro ratiae volorro te reribus dolorer sperchicium faceata tiustia prat.</p>
 <p>Itatur? Quiatae cullecum rem ent aut odis in re eossequodi nonsequ idebis ne sapicia is sinveli squiatum, core et que aut hariosam ex eat.</p>
 <h2 id="images">Images<a href="#images" class="hanchor" ariaLabel="Anchor">#</a> </h2>
-<p><img alt="Terminal Theme Preview" src="/img/terminal-theme.png"></p>
+<p><img src="/img/terminal-theme.png" alt="Terminal Theme Preview"></p>
 <h3 id="figure-with-a-caption">Figure with a caption<a href="#figure-with-a-caption" class="hanchor" ariaLabel="Anchor">#</a> </h3>
 <figure><img src="/img/terminal-theme.png"
     alt="Terminal Theme Preview"><figcaption>
@@ -209,13 +206,11 @@
 <h3 id="blockquote-without-attribution">Blockquote without attribution<a href="#blockquote-without-attribution" class="hanchor" ariaLabel="Anchor">#</a> </h3>
 <blockquote>
 <p>Tiam, ad mint andaepu dandae nostion secatur sequo quae.
-<strong>Note</strong> that you can use <em>Markdown syntax</em> within a blockquote.</p>
-</blockquote>
+<strong>Note</strong> that you can use <em>Markdown syntax</em> within a blockquote.</p></blockquote>
 <h3 id="blockquote-with-attribution">Blockquote with attribution<a href="#blockquote-with-attribution" class="hanchor" ariaLabel="Anchor">#</a> </h3>
 <blockquote>
 <p>Don&rsquo;t communicate by sharing memory, share memory by communicating.<br>
-— <cite>Rob Pike<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></cite></p>
-</blockquote>
+— <cite>Rob Pike<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></cite></p></blockquote>
 <h2 id="buttons-and-links">Buttons and links<a href="#buttons-and-links" class="hanchor" ariaLabel="Anchor">#</a> </h2>
 <p><button>Button</button>
 <a href="">Link</a>
@@ -223,39 +218,39 @@
 <h2 id="tables">Tables<a href="#tables" class="hanchor" ariaLabel="Anchor">#</a> </h2>
 <p>Tables aren&rsquo;t part of the core Markdown spec, but Hugo supports supports them out-of-the-box.</p>
 <table>
-<thead>
-<tr>
-<th>Name</th>
-<th>Age</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Bob</td>
-<td>27</td>
-</tr>
-<tr>
-<td>Alice</td>
-<td>23</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th>Name</th>
+          <th>Age</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>Bob</td>
+          <td>27</td>
+      </tr>
+      <tr>
+          <td>Alice</td>
+          <td>23</td>
+      </tr>
+  </tbody>
 </table>
 <h3 id="inline-markdown-within-tables">Inline Markdown within tables<a href="#inline-markdown-within-tables" class="hanchor" ariaLabel="Anchor">#</a> </h3>
 <table>
-<thead>
-<tr>
-<th>Italics</th>
-<th>Bold</th>
-<th>Code</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><em>italics</em></td>
-<td><strong>bold</strong></td>
-<td><code>code</code></td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th>Italics</th>
+          <th>Bold</th>
+          <th>Code</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td><em>italics</em></td>
+          <td><strong>bold</strong></td>
+          <td><code>code</code></td>
+      </tr>
+  </tbody>
 </table>
 <h2 id="forms">Forms<a href="#forms" class="hanchor" ariaLabel="Anchor">#</a> </h2>
 <fieldset>
